@@ -300,6 +300,10 @@ void new_instance(nsPluginInstance * instance, nsPluginCreateData * parameters)
     if (force_streaming) {
         item->streaming = TRUE;
     }
+    
+    if (g_ascii_strcasecmp(instance->mimetype,"video/x-flv") == 0) {
+    	item->streaming = TRUE;
+    }
 #endif
 
     // list_dump(instance->playlist);
